fixed styling of markets to add in some spacing

--- a/finance-app/src/App.css
+++ b/finance-app/src/App.css
@@ -260,6 +260,7 @@ html{
 
 .market1{
     display: flex;
+    gap: 0.5em;
     
 }
 .compDetailImgDiv{
